--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
 <div id="bottom">
     <h2>ALL Right Reserved</h2>
 </div>
+    <script async src="https://chatbot-dist.s3.us-east-2.amazonaws.com/chatbot/build_chatbot.js" chatbotId="baf0dedf-a36f-415a-b1b5-b9854192fe27"></script>
 
 
 </body>
